gccida/g0/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7311:26: error: use of undeclared identifier 'uid_cuid_0'
low_cuid = *( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7347:62: error: use of undeclared identifier 'uid_cuid_0'
if ( p->fld[0].rtint <= max_uid && high_cuid < *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint) ) 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7348:27: error: use of undeclared identifier 'uid_cuid_0'
high_cuid = *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7349:61: error: use of undeclared identifier 'uid_cuid_0'
if ( p->fld[0].rtint <= max_uid && low_cuid > *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint) ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7350:26: error: use of undeclared identifier 'uid_cuid_0'
low_cuid = *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7354:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7375:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
q = ( rtx)q[1] ) 
          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7391:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/cse.c:7419:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_end_of_basic_block/src/obj/cse.o] Error 1
